Build commit
Commit contains configuration files based on play framework and play
salat plugin